[project]
name = "currencycloud"
version = "5.7.1"
description = "Async Python SDK for the Currencycloud API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.20.0", "pyyaml==6.0.1"]
license = "MIT"
authors = [{ name = "Johnny Deuss", email = "johnny@nook.io" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mock==3.0.5",
    "pytest-asyncio>=0.25.2",
    "pytest>=6.0.0",
    "ruff==0.9.1",
    "vcrpy==6.0.2",
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 120
exclude = ["app/schema/xero/"]

[tool.ruff.lint]
ignore = [
    # E501 and W191 can conflict with black formatting.
    "E501",
]
select = ["E", "F", "W", "I001", "DTZ", "UP", "INP"]

[tool.ruff.lint.extend-per-file-ignores]
"src/example/*.py" = ["INP001"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.hatch.build.targets.wheel]
packages = ["src/currencycloud"]
only-packages = true

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
